--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -35,18 +35,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'get_battlelogs'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32mC:\\Users\\Public\\Documents\\ESTsoft\\CreatorTemp\\ipykernel_3440\\3782116108.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mget_battlelogs\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mparse_single_user\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[0mtoken\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mPath\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'G:/내 드라이브/GitHub/Brawl Stars Stats/brawlstats_token.txt'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstrip\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'get_battlelogs'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 15568 entries, 0 to 15567\n",
+      "Data columns (total 19 columns):\n",
+      " #   Column              Non-Null Count  Dtype \n",
+      "---  ------              --------------  ----- \n",
+      " 0   battle_time         15568 non-null  object\n",
+      " 1   mode                15568 non-null  object\n",
+      " 2   map                 15568 non-null  object\n",
+      " 3   type                15568 non-null  object\n",
+      " 4   duration            14848 non-null  object\n",
+      " 5   player_tag          15568 non-null  object\n",
+      " 6   player_name         15568 non-null  object\n",
+      " 7   player_trophies     15568 non-null  object\n",
+      " 8   player_top_brawler  15568 non-null  object\n",
+      " 9   star_player         15568 non-null  object\n",
+      " 10  team                15568 non-null  object\n",
+      " 11  result              14848 non-null  object\n",
+      " 12  rank                720 non-null    object\n",
+      " 13  brawler_id          15568 non-null  object\n",
+      " 14  brawler_name        15568 non-null  object\n",
+      " 15  brawler_power       15568 non-null  object\n",
+      " 16  brawler_star_power  15568 non-null  object\n",
+      " 17  brawler_gadget      15568 non-null  object\n",
+      " 18  brawler_trophies    15568 non-null  object\n",
+      "dtypes: object(19)\n",
+      "memory usage: 2.3+ MB\n"
      ]
     }
    ],
@@ -56,7 +77,7 @@
     "import pandas as pd\n",
     "import datetime\n",
     "\n",
-    "token = open(Path('G:/내 드라이브/GitHub/Brawl Stars Stats/brawlstats_token.txt')).read().strip()\n",
+    "token = open(Path('C:/Users/yenny/Desktop/brawlstats_token.txt')).read().strip()\n",
     "\n",
     "now = datetime.datetime.now()\n",
     "time = now.strftime('%Y%m%d_%H%M')\n",
@@ -64,6 +85,7 @@
     "client = brawlstats.Client(token)\n",
     "rankers = client.get_rankings(ranking='players')\n",
     "rankers_tag_list = [rankers[i]['tag'].split(\"#\")[1] for i in range(len(rankers))]\n",
+    "users_tag_list = ['GPYC8RPGU', 'G0CUVGVLP', 'GOCUCCG8P', 'Q89CUGU0P', 'YR2J2QUL', '9J20P02VR']\n",
     "\n",
     "## 23-03-06 듀오쇼다운 모드 수집하는 코드 추가\n",
     "\n",
@@ -186,7 +208,19 @@
     "\n",
     "df.to_csv(f'C:/Users/yenny/Desktop/{time}_rankers.csv', encoding='utf-8')\n",
     "\n",
-    "df.info()"
+    "\n",
+    "df = pd.DataFrame(columns=columns)\n",
+    "for user in users_tag_list:\n",
+    "    try:\n",
+    "        df_temp = pd.DataFrame(parse_single_user(user))\n",
+    "        df = pd.concat([df, df_temp], axis=0, ignore_index=True)\n",
+    "    except:\n",
+    "        pass\n",
+    "\n",
+    "df_origin = df.copy()\n",
+    "df[\"player_name\"] = df[\"player_name\"].str.replace(pat=r'[^1-9a-zA-Z]', repl=r'', regex=True)\n",
+    "\n",
+    "df.to_csv(f'C:/Users/yenny/Desktop/{time}_users.csv', encoding='utf-8')"
    ]
   },
   {
