230317_01 team 코드 수정

--- a/collect_battle_log.ipynb
+++ b/collect_battle_log.ipynb
@@ -99,7 +99,7 @@
     "\n",
     "                for team in teams:\n",
     "                    players_tag = [member['tag'][1:] for member in team]\n",
-    "                    side = 1 if tag in players_tag else 0\n",
+    "                    side = 1 if tag in players_tag else 2\n",
     "\n",
     "                    for player in team:\n",
     "                        player_info = client.get_profile(player['tag'][1:])\n",
@@ -159,7 +159,7 @@
     "                        'player_name': player['name'],\n",
     "                        'player_trophies': player_info.trophies,\n",
     "                        'player_top_brawler': player_brawlers[0]['name'],\n",
-    "                        'star_player': 1 if player['tag'][1:] == star_player_tag else 0,\n",
+    "                        'star_player': None,\n",
     "                        'team': side,\n",
     "                        'result': None,\n",
     "                        'rank': battle['battle']['rank'] if tag in players_tag else 0,\n",
